-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.581 2009-07-15 07:30:05 guru Exp $
-----------------------------------------------------------------------------------------

2009-07-15	pwessel
	* grdmask.c:		Free some memory that was ignored.
-----------------------------------------------------------------------------------------
2009-07-15
	* GMT 4.5.0 finalized and released
-----------------------------------------------------------------------------------------

2009-07-13	pwessel
	* surface.c:		When data lie exactly on a plane and -L was used, surface tried to free memory
				for constraints that never needed to be allocated.
2009-07-10	pwessel
	* gmt_suppl.html:	Add all the new supplement programs to the HTML doc page.
	* *.c:			Handle error codes so as to not raise the wrath of Ubuntu

2009-07-10	remko
	* gmt_init.c:		GMT_font_lookup now understands font numbers too.
	* psscale.c:		Added -Aa and -Al options to move only the annotations or label to the
				other side of the color bar. When using -A on horizontal bar, the last
				tick mark would not appear. Require -Ac to keep the column plotting
				of vertical labels.
	* pslegend.c:		Make font height dependent on actual font used.

2009-07-09	pwessel
	* gmt_mgg_header2.c:	Can now handle float grids, and properly handles byte-order swapping in input.
	* segyprogs/pssegy.c:	Casting as long forced 8 rather than 4-byte offsets. Thanx to Adrian Benson.
	* segyprogs/pssegyz.c:	Casting as long forced 8 rather than 4-byte offsets.
	* segyprogs/segy2grd.c:	Casting as long forced 8 rather than 4-byte offsets.

2009-07-09	remko
	* psclip.c:		Produce warning when using -B in combination with -N or -T.
				Better reuse of code.
	* psclip.txt:		Explained even-odd rule.
	* psxy.{c,txt}:		Added -T option. Equivalent to adding /dev/null (or NUL on Windows).
	* pslegend.c, anim01.sh:	Make use of new psxy -T option.

2009-07-08	pwessel